Adding the Games

--- a/emotion-bot.html
+++ b/emotion-bot.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <link rel="shortcut icon" href="Wert_2031.ico" type="image/x-icon">
   <title>WertBot — Emotion Chat</title>
 
   <!-- External stylesheet -->
@@ -115,3 +116,4 @@
   <script src="chatbot.js"></script>
 </body>
 </html>
+
