--- a/navbar.html
+++ b/navbar.html
@@ -5,5 +5,6 @@
     <li><a href="Gaming.html">Gaming</a></li>
     <li><a href="T&C.html">T&C</a></li>
     <li><a href="emotion-bot.html">Chat Bot</a></li>
+    <li><a href="Games.html">Games</a></li>
   </ul>
 </nav>
