--- a/ChatgptFPS.html
+++ b/ChatgptFPS.html
@@ -5,6 +5,7 @@
 <title>ChatGPT's 3D Battle Royale</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="Wert_2031.ico" type="image/x-icon">
+    <link rel="stylesheet" href="Main-Style.css">
 <style>
 html, body {
     margin: 0;
