--- a/Games.html
+++ b/Games.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <link rel="shortcut icon" href="Wert_2031.ico" type="image/x-icon">
+  <link rel="stylesheet" href="Main-Style.css">
   <title>Wert-Web — Games</title>
 
 </head>
